# ATIGamma_redis_driver

./: ATIGamma_redis_driver.cpp  CMakeLists.txt  README.md
Documentation/: Assigned_IP_addresses.txt
calibration_files/FT27484/: FT27484 Net.xml
calibration_files/FT27485/: FT27485 Net.xml
config_folder/: default_config.xml
